--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -48,6 +50,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-portalize": "^1.0.7",
@@ -59,7 +62,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "styled-components": "^6.1.17",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "twrnc": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
