--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start ",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -31,20 +31,21 @@
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.7",
+    "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.5",
+    "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
+    "expo-image": "~2.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "firebase": "^11.7.1",
     "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -57,7 +58,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
